--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>FIREAC (FiveM anti-cheat by Amirreza Jaberi)</title>
+    <title>FIREAC (FiveM anti-cheat by M Tri Hamdani)</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -507,7 +507,7 @@
                                 </div>
                                 <div class="playerName">
                                     <span class="title"> Player name : </span>
-                                    <span class="value"> AmIrReZa </span>
+                                    <span class="value"> M Tri Hamdani </span>
                                 </div>
                             </button>
                         </div>
@@ -1134,12 +1134,12 @@
                     </div>
                 </div>
                 <div class="footer">
-                    <span class="footerText">This anti-cheat developed by <button
-                            onclick="openUrl('https://amirrezajaberi.ir/')">Amirreza
-                            Jaberi</button> as <button
-                            onclick="openUrl('https://amirrezajaberi.ir/fireac')">FIREAC</button>
+                    <span class="footerText">Anti-cheat ini dikembangkan oleh <button
+                            onclick="openUrl('https://www.instagram.com/m.trihamdani')">M Tri Hamdani
+                            </button> as <button
+                            onclick="openUrl('/')">HIGHCLASS</button>
                         on
-                        github & it's public to use for all users .</span>
+                        github & bersifat private untuk digunakan oleh semua pengguna .</span>
                 </div>
             </div>
     </section>
