--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>FIREAC (FiveM anti-cheat by M Tri Hamdani)</title>
+    <title>FIREAC HIGHCLASS (FiveM anti-cheat by M Tri Hamdani)</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
